# torch-qat

./: .buildinfo  .gitignore  README.md  best-practice.html  config.html  confuse.html  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  train.html
.doctrees/: best-practice.doctree  config.doctree  confuse.doctree  environment.pickle  index.doctree  intro.doctree  train.doctree
.doctrees/api/: helper.doctree  index.doctree  runner.doctree  xinet.doctree
.doctrees/dev/: index.doctree
.doctrees/test/: best-practice.doctree  config.doctree  confuse.doctree  index.doctree  train.doctree
.doctrees/tutorial/: index.doctree  pqt-qat.doctree  qat.doctree
.github/workflows/: deploy.yml
_sources/: index.md.txt  intro.md.txt
_sources/api/: index.rst.txt
_sources/test/: best-practice.md.txt  index.md.txt
_sources/tutorial/: index.md.txt  pqt-qat.ipynb.txt  qat.ipynb.txt
_static/: default.css  documentation_options.js
api/: helper.html  index.html  runner.html  xinet.html
dev/: index.html
docs/: best-practice.md  conf.py  index.md  intro.md  resnet.txt
docs/api/: helper.rst  runner.rst  xinet.rst
docs/test/: confuse.md
docs/tutorial/: pqt-qat.ipynb
docs/tutorial/include/: pqt-qat.md
src/torchq/: __init__.py  xinet.py
test/: best-practice.html  config.html  confuse.html  index.html  train.html
tutorial/: index.html  pqt-qat.html  qat.html
