[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
authors = [{name = "xinetzone", email = "735613050@qq.com"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
name = "torchq"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "d2py",
  "sphinx-book-theme"
]

maintainers = [
  {name = "xinetzone", email = "735613050@qq.com"},
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Theme",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
Home = "https://github.com/xinetzone/torch-qat"

[project.optional-dependencies]
doc = [
  "myst-nb",
  "pytest",
  "pytest-regressions",
  "sphinxext-rediraffe",
  "sphinx_copybutton",
  "sphinx-panels"
  # "sphinx-tabs"
]

coverage = [
  "pytest-cov",
  "codecov",
  "torchq[test]",
]
dev = [
  "pyyaml",
  "pre-commit",
  "torchq[coverage]",
]
test = [
  "pytest",
  "torchq[doc]",
]

# [project.entry-points]
# "sphinx.html_themes" = {torchq = "torchq"}

[tool.flit.sdist]
# include = ["docs/"]
exclude = ['docs', '.git', '.github']
